--- a/algoscale-front-end/front-end/src/app/user-list/user-list.component.html
+++ b/algoscale-front-end/front-end/src/app/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-6 user-container">
-    <h2 style="margin: auto"> User Details</h2>
+    <h2 style="margin: auto"> User List</h2>
     <table class="table table-striped">
       <thead>
       <tr>
